# cubemx_rt_thread_stm32

./: .gitignore  .mxproject  CMakeLists.txt  STM32F407VETx_FLASH.ld  cubemx_rt_thread_stm32.ioc
Core/Inc/: main.h
Core/Src/: main.c  stm32f4xx_hal_msp.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
